--- a/Reservation.html
+++ b/Reservation.html
@@ -36,7 +36,7 @@
     >
       <tr>
         <td colspan="3" style="padding-left: 20px">
-          <a href="./Restaurant Website.html"
+          <a href="./index.html"
             ><img
               src="./TASTY PARADISE cover.png"
               alt="img"
@@ -47,7 +47,7 @@
         <td>
           <ul>
             <li style="padding-left: 250px;">
-              <a href="./Restaurant Website.html">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li><a  href="./Paradise_menu.html">Menu</a></li>
             <li><a  href="./Banquets.html">Banquets</a></li>
