Paradise_menu.html

--- a/Paradise_menu.html
+++ b/Paradise_menu.html
@@ -39,7 +39,7 @@
     >
       <tr>
         <td colspan="3" style="padding-left: 40px">
-          <a href="./Restaurant Website.html"
+          <a href="./index.html"
             ><img
               src="./TASTY PARADISE cover.png"
               alt="img"
@@ -49,7 +49,7 @@
         </td>
         <td>
           <ul>
-            <li style="padding-left: 250px"><a href="./Restaurant Website.html">Home</a></li>
+            <li style="padding-left: 250px"><a href="./index.html">Home</a></li>
             <li>
               <a
                 style="text-decoration: underline"
