--- a/Banquets.html
+++ b/Banquets.html
@@ -37,7 +37,7 @@
     >
       <tr>
         <td colspan="3" style="padding-left: 20px">
-          <a href="./Restaurant Website.html"
+          <a href="./index.html.html"
             ><img
               src="./TASTY PARADISE cover.png"
               alt="img"
@@ -48,7 +48,7 @@
         <td>
           <ul>
             <li style="padding-left: 250px;">
-              <a href="./Restaurant Website.html">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li><a  href="./Paradise_menu.html">Menu</a></li>
             <li><a class="active"  style="text-decoration: underline" href=" ">Banquets</a></li>
