--- a/Banquets.html
+++ b/Banquets.html
@@ -37,7 +37,7 @@
     >
       <tr>
         <td colspan="3" style="padding-left: 20px">
-          <a href="./index.html.html"
+          <a href="./index.html"
             ><img
               src="./TASTY PARADISE cover.png"
               alt="img"
